# codeGenerateSkill

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
codegen/: __init__.py  cli.py  ir.py  parser.py  render.py  schema.py  type_mapping.py  writer.py
codegen/templates/: pom.xml.j2
codegen/templates/app/: Application.java.j2
codegen/templates/common/: ErrorCode.java.j2  FileController.java.j2  GlobalExceptionHandler.java.j2  PageResult.java.j2  Result.java.j2  TenantContextHolder.java.j2  WebMvcConfig.java.j2
codegen/templates/config/: MybatisMetaObjectHandler.java.j2  MybatisPlusConfig.java.j2  SwaggerConfig.java.j2
codegen/templates/controller/: Controller.java.j2  DashboardController.java.j2  DictionaryController.java.j2
codegen/templates/dto/: CreateRequest.java.j2  DictionaryOption.java.j2  QueryRequest.java.j2  RelationDto.java.j2  RelationQuery.java.j2  UpdateRequest.java.j2
codegen/templates/entity/: Entity.java.j2
codegen/templates/exception/: BizException.java.j2  NotFoundException.java.j2
codegen/templates/frontend/: package.json.j2  vue.config.js.j2
examples/: fullstack_sample.json  preset_api_only.json  preset_audit_admin.json  preset_backend_frontend.json  preset_light_auth.json  preset_saas_multi_tenant.json  sample.json  student_class_management.json  student_management.json  student_single_table.json
skills/springboot2-crud-codegen/: SKILL.md
springboot2_crud_codegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_parser.py  test_renderer.py  test_smoke.py
(+25 files in other folders)
