[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "springboot2-crud-codegen"
version = "0.1.0"
description = "Generate Spring Boot 2 + MyBatis-Plus CRUD project from JSON"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Jinja2>=3.1.0",
  "jsonschema>=4.21.0"
]

[project.scripts]
codegen = "codegen.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["codegen*"]

[tool.setuptools.package-data]
codegen = ["templates/**/*.j2"]
